<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context="com.cmsc355.ccnd.gymrat.CaloriesCounter">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/Food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Food"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/FoodEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/Calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calories"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/caloriesEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addFood"
            android:text="Add" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteFood"
            android:text="Delete" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="refreshClick"
            android:text="refresh" />

        <Button
            android:id="@+id/deleteAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteAllFood"
            android:text="Delete ALl" />
    </LinearLayout>

    <ListView
        android:id="@+id/calorieList"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/caloriesCounterText"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>
