...
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/ExampleWorkout"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_alignStart="@+id/CalorieCounter"
        android:layout_below="@+id/MyWorkouts"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:onClick="exampleWorkoutClick"
        android:text="Example Workout"
        android:textColor="#ffffff"
...
        android:layout_centerVertical="true"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="28dp"
        android:background="#000000"
        android:onClick="calorieCounterClick"
        android:text="Calorie Counter"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExampleWorkout"
        tools:ignore="MissingConstraints"
...
